@@ -5,6 +5,9 @@ Changelog
 1.1.7 (unreleased)
 ------------------
 
+- Updated MIME types for Adobe Photoshop, Illustrator and InDesign
+  [lgraf]
+
 - Added icons for Adobe file types (Illustrator, Indesign and Photoshop)
   [lgraf]
 
